--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Faça login<br>E entre para o nosso time</h1>
-            <img src="Astr.svg" class="left-login-image" alt="Animação de um astronauta flutuando no espaço">
+            <img src="images/Astr.svg" class="left-login-image" alt="Animação de um astronauta flutuando no espaço">
         </div>
         <div class="right-login">
             <div class="card-login">
